app-a/ch19/basic-gateway/api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  namespace: default
  labels:
    app: api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-app
  namespace: default
spec:
  selector:
    app: api-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
